2.0.0
• Compatible with grocy version 3.0.0 and higher
• Not compatible anymore with grocy version 2.7.1
• New overview, settings, product & external scanner pages
• Lots of new options for configuration (check them out)
• New login flow for QR codes from grocy server
• Improved loading speed by use of database
• Smooth & consistent navigation between pages
• Many internal code changes & improvements
• Fixed layout for text on features pages
• Fixed amount with factor on missing batch items page (#258)
• Updated translations

1.10.1
• Hotfix which allows HTTP cleartext traffic again (#252)

1.10.0
• Czech, Portuguese, Chinese & Italian translation (thanks translators!)
• App now trusts Android user certificates (thanks murizorun!) (#15)
• Names from Open Food Facts are in device language if possible (#211)
• Improved compatibility warning (#196) & added update warning (#223)
• Fixed purchase workflow in missing batch items view (#225)
• Fixed crash after rotation in product edit view (#214)
• Fixed crash in shopping list with empty locationId (#226)
• Fixed Purchase & Consume of product with space on start/end (#219)
• Updated translations

1.9.0
• Polish translation (thanks Marcin!)
• Initial Scanner device support (needs TAB as suffix)
• Initial Tor Hidden Services support through Orbot
• Fixed consume batch mode with specific entry
• Fixed shopping list preselection with shortcut
• Fixed amount color of missing items in stock
• Fixed wrong filtering of missing items
• Plural strings for better translation support
• Updated translations

1.8.7
• Hebrew translation (thanks Yaron!)
• Bug fixes and improvements

1.8.6
• This was just a new tag for F-Droid

1.8.5
• Fixed Norwegian translation
• Updated translations

1.8.4:
• Norwegian translation (thanks Tor!)
• Spanish translation (thanks Martín!)

1.8.3:
• Hotfix for batch mode

1.8.2:
• Moved in-app help to project page on Github
• Updated translations
• Bug fixes and improvements

1.8.1: