@@ -6,6 +6,7 @@
 • New login flow for QR codes from grocy server
 • Improved loading speed by use of database
 • Smooth & consistent navigation between pages
+• Server requests are now more secure with API key in header
 • Many internal code changes & improvements
 • Fixed layout for text on features pages
 • Fixed amount with factor on missing batch items page (#258)
